# hedgehog

./: .env.public  README.md  hedgehog.sh  lint.sh  pyproject.toml  run.sh
hedgehog/: backtester.py  cli.py  display.py  main.py  minimal_test.py  old_predict.py  progress.py  test_workflow.py  workflow.py
hedgehog/agents/: __init__.py  bill_ackman.py  fundamentals.py  portfolio_manager.py  risk_manager.py  sentiment.py  technicals.py  valuation.py  warren_buffett.py
hedgehog/tools/: __init__.py  api.py  logfire_setup.py
